# mc_jira

./: .gitignore  Procfile  README.md  dom_extractor.py  pyproject.toml  requirements.txt  server.py
src/jira_mcp/: __init__.py
