[project]
name = "jira-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shekhar", email = "reach2shekhar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.1",
    "requests>=2.32.5",
]

[project.scripts]
jira-mcp = "jira_mcp:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
